Actualizacion cambios en vista y validaciones adicionales @karyn2 Angela Ceron 27/06/2023

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Taller POO</title>
+    <link rel="icon" href="/img/icono.ico">
     <!-- CSS Propios -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- CSS Bootstrap -->
@@ -146,7 +147,7 @@
                             Calcular Edad Actual</button>
                     </div>
                     <div class="col-sm-3" >
-                        <label  id="edadactual" name="edadactual" class="form-control"> Edad actual</label>
+                        <label  id="edadactual" name="edadactual" class="form-control"> Edad Actual</label>
                     </div> 
                     <div class="col-sm-3">
                         <button type="button" class="btn btn-primary"
@@ -165,7 +166,7 @@
                             <i class="fa fa-calculator" aria-hidden="true"></i> &nbsp;   Prestaciones &nbsp; </button>
                     </div>
                     <div class="col-sm-3" >
-                        <label id="prestaciones" class="form-control"> Valor Prestaciones</label>
+                        <label id="prestaciones" name="prestaciones" class="form-control"> Valor Prestaciones</label>
                     </div> 
 
                 </div>
